Improve import rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,14 @@
 		"import/no-cycle": "error",
 		"import/no-default-export": "error",
 
+		"no-restricted-imports": [
+			"error",
+			{
+				"name": "next/router",
+				"message": "Please use `next/navigation` instead."
+			}
+		],
+
 		// allow {} even though it's unsafe but comes handy
 		"@typescript-eslint/ban-types": [
 			"error",
