--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
 		"allowUnreachableCode": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
+		"noUncheckedIndexedAccess": true,
 		"plugins": [
 			{
 				"name": "next"
@@ -27,6 +28,13 @@
 			"@ui/*": ["./src/components/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "tailwind.config.ts"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"tailwind.config.ts",
+		".graphqlrc.ts"
+	],
 	"exclude": ["node_modules"]
 }
